<?xml version="1.0"?>
<package format="3">
  <name>station</name>
  <version>0.0.1</version>
  <description>Event-driven warehouse RL nodes</description>
  <maintainer email="noschneide@stud.hs-heilbronn.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>interfaces</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>