<?xml version="1.0"?>
<package format="3">
  <name>warehouse_planner</name>
  <version>0.1.0</version>
  <description>Event-driven MDP warehouse planner using SB3 Maskable PPO.</description>
  <maintainer email="todo@example.com">todo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>interfaces</depend>
  <depend>std_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- Python deps (installed via pip in most setups) -->
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
