<?xml version="1.0"?>
<package format="3">
  <name>warehouse_robot</name>
  <version>0.1.0</version>
  <description>Discrete training robot node implementing /planner/cmd without Gazebo.</description>
  <maintainer email="n/a">Noris_ASAP</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>interfaces</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
